crates/service/tests/code_action/snapshots/features__code_action__inline_func_type__params_and_results.snap
---
source: crates/service/tests/code_action/inline_func_type.rs
expression: response
---
[
  {
    "title": "Inline func type `$t`",
    "kind": "refactor.inline",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 17
              },
              "end": {
                "line": 3,
                "character": 17
              }
            },
            "newText": " (param $a i32) (param i32 i32) (result f64)"
          }
        ]
      }
    }
  }
]
