crates/service/tests/code_action/snapshots/features__code_action__inline_func_type__single_param.snap
---
source: crates/service/tests/code_action/inline_func_type.rs
expression: response
---
[
  {
    "title": "Inline func type `0`",
    "kind": "refactor.inline",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 16
              },
              "end": {
                "line": 3,
                "character": 16
              }
            },
            "newText": " (param $a i32)"
          }
        ]
      }
    }
  }
]
